--- a/Container/myprojects.css
+++ b/Container/myprojects.css
@@ -12,24 +12,26 @@ body {
   justify-content: space-between;
 }
 
-
 .header-left {
   flex: 1;
   padding-left: 70px;
-  font-family:Arial, sans-serif;
-  color:white;
+  font-family: Arial, sans-serif;
+  color: white;
 }
 
 .header-right {
   display: flex;
   align-items: center;
 }
-.my-projects{
+
+.my-projects {
   padding-left: 90px;
   margin-top: 10px;
 }
+
 #search-projects {
   margin-right: 10px;
+  border-radius: 50%;
 }
 
 #search-input {
@@ -37,6 +39,7 @@ body {
   font-size: 14px;
   height: 30px;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 
 #add-project-button {
@@ -48,10 +51,11 @@ body {
   cursor: pointer;
   height: 30px;
   text-align: center;
+  border-radius: 10px;
 }
 
 #add-project-button:hover {
-  background-color: #45a049;
+  background-color: #186935;
 }
 
 .project-list {
@@ -68,7 +72,7 @@ body {
   margin-bottom: 20px;
   padding: 20px;
   transition: transform 0.3s ease-in-out;
-  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.5); 
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease-in-out;
   border-radius: 16px;
 }
@@ -157,19 +161,16 @@ body.popup-open {
   margin-right: 10px;
 }
 
-/* Style for two-column form layout */
 .form-column {
   display: block;
   width: 100%;
   margin-bottom: 20px;
 }
 
-/* Style for member input boxes */
 .member-container {
   margin-bottom: 10px;
 }
 
-/* Additional styles for task list */
 #project-tasks-section {
   margin-top: 20px;
 }
@@ -187,11 +188,8 @@ body.popup-open {
   margin-bottom: 5px;
 }
 
-
-
-
 .project:hover {
-  transform: scale(1.05); /* Increase the size on hover */
+  transform: scale(1.05);
 }
 
 .open-button {
@@ -201,22 +199,21 @@ body.popup-open {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Add box shadow transition */
-  border-radius: 15px;
-  /* Add box shadow */
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   box-shadow: 0 4px 8px rgba(52, 152, 219, 0.3);
 }
 
 .open-button:hover {
-  background-color: #3e8f41; /* Change the background color on hover */
-  box-shadow: 0 6px 12px rgba(52, 152, 219, 0.5); /* Increase the box shadow on hover */
+  background-color: #3e8f41;
+  box-shadow: 0 6px 12px rgba(52, 152, 219, 0.5);
 }
 
-*{
+* {
   margin: 0;
-  padding: 0; 
+  padding: 0;
   text-decoration: none;
 }
+
 :root {
   --primary-color: #4CAF50;
   --secondary-color: #333;
@@ -225,52 +222,63 @@ body.popup-open {
   --border-color: #ddd;
 }
 
-.sidebar{
+.sidebar {
   position: fixed;
   width: 240px;
   left: -240px;
   height: 100%;
-  background-color: #fff;
+  background-color: #495c8e;
   transition: all .5s ease;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.3);
+  margin-bottom: 100px;
 }
-.sidebar header{
+
+.sidebar header {
   font-size: 20px;
-  color: #353535;
+  color: #fff;
   line-height: 70px;
   text-align: center;
-  background-color: #fff;
+  background-color:#4CAF50;
   user-select: none;
-  font-family:Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
-.sidebar a{
+
+.sidebar a {
   display: block;
   height: 50px;
   width: 100%;
-  color: #353535;
+  color: #fff;
   line-height: 65px;
   padding-left: 30px;
   box-sizing: border-box;
   border-left: 5px solid transparent;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   transition: all .5s ease;
 }
-a.active,a:hover{
+
+a.active,
+a:hover {
   border-left: 5px solid var(--accent-color);
   color: #fff;
-   background: linear-gradient(to left, var(--accent-color), var(--gradient-color));
+  background: linear-gradient(to left, var(--accent-color), var(--gradient-color));
 }
-.sidebar a i{
+
+.sidebar a i {
   font-size: 18px;
   margin-right: 16px;
 }
-.sidebar a span{
+
+.sidebar a span {
   letter-spacing: 1px;
   text-transform: uppercase;
-} 
-#check{
+}
+
+#check {
   display: none;
 }
-label #btn,label #cancel{
+
+label #btn,
+label #cancel {
   position: absolute;
   left: 5px;
   cursor: pointer;
@@ -279,72 +287,82 @@ label #btn,label #cancel{
   margin: 15px 30px;
   font-size: 29px;
   background-color: whitesmoke;
-  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-    inset -7px -7px 10px 0px rgba(0,0,0,.1),
-   3.5px 3.5px 20px 0px rgba(0,0,0,.1),
-   2px 2px 5px 0px rgba(0,0,0,.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+    inset -7px -7px 10px 0px rgba(0, 0, 0, .1),
+    3.5px 3.5px 20px 0px rgba(0, 0, 0, .1),
+    2px 2px 5px 0px rgba(0, 0, 0, .1);
   height: 45px;
   width: 45px;
   text-align: center;
-  text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
   line-height: 45px;
   transition: all .5s ease;
 }
-label #cancel{
+
+label #cancel {
   opacity: 0;
   visibility: hidden;
 }
-#check:checked ~ .sidebar{
+
+#check:checked~.sidebar {
   left: 0;
 }
-#check:checked ~ label #btn{
+
+#check:checked~label #btn {
   margin-left: 245px;
   opacity: 0;
   visibility: hidden;
 }
-#check:checked ~ label #cancel{
+
+#check:checked~label #cancel {
   margin-left: 245px;
   opacity: 1;
   visibility: visible;
 }
-@media(max-width : 860px){
-  .sidebar{
+
+@media(max-width: 860px) {
+  .sidebar {
     height: auto;
     width: 70px;
     left: 0;
     margin: 100px 0;
   }
-  header,#btn,#cancel{
+  header,
+  #btn,
+  #cancel {
     display: none;
   }
-  span{
+  span {
     position: absolute;
     margin-left: 23px;
     opacity: 0;
     visibility: hidden;
   }
-  .sidebar a{
+  .sidebar a {
     height: 60px;
   }
-  .sidebar a i{
+  .sidebar a i {
     margin-left: -10px;
   }
   a:hover {
     width: 200px;
     background: inherit;
   }
-  .sidebar a:hover span{
+  .sidebar a:hover span {
     opacity: 1;
     visibility: visible;
   }
 }
 
-.sidebar > a.active,.sidebar > a:hover:nth-child(even) {
-  --accent-color: #333232;
-  --gradient-color: #494948;
- 
-}
-.sidebar a.active,.sidebar > a:hover:nth-child(odd) {
-  --accent-color: #333232;
+.sidebar>a.active,
+.sidebar>a:hover:nth-child(even) {
+  --accent-color: #323233;
   --gradient-color: #494948;
 }
+
+.sidebar a.active,
+.sidebar>a:hover:nth-child(odd) {
+  --accent-color: #333232;
+  --gradient-color: #494948;
+}
+
