--- a/Container/viewprojects.css
+++ b/Container/viewprojects.css
@@ -128,140 +128,161 @@ a:hover {
 }
 /* ... Add any additional styling as needed ... */
 
-*{
-    margin: 0;
-    padding: 0; 
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+:root {
+  --primary-color: #4CAF50;
+  --secondary-color: #333;
+  --background-color: #f5f5f5;
+  --text-color: #333;
+  --border-color: #ddd;
+}
+
+.sidebar {
+  position: fixed;
+  width: 240px;
+  left: -240px;
+  height: 100%;
+  background-color: #495c8e;
+  transition: all .5s ease;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.3);
+  margin-bottom: 100px;
+}
+
+.sidebar header {
+  font-size: 20px;
+  color: #fff;
+  line-height: 70px;
+  text-align: center;
+  background-color:#4CAF50;
+  user-select: none;
+  font-family: Arial, sans-serif;
+}
+
+.sidebar a {
+  display: block;
+  height: 50px;
+  width: 100%;
+  color: #fff;
+  line-height: 65px;
+  padding-left: 30px;
+  box-sizing: border-box;
+  border-left: 5px solid transparent;
+  font-family: Arial, sans-serif;
+  transition: all .5s ease;
+}
+
+a.active,
+a:hover {
+  border-left: 5px solid var(--accent-color);
+  color: #fff;
+  background: linear-gradient(to left, var(--accent-color), var(--gradient-color));
+}
+
+.sidebar a i {
+  font-size: 18px;
+  margin-right: 16px;
+}
+
+.sidebar a span {
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+#check {
+  display: none;
+}
+
+label #btn,
+label #cancel {
+  position: absolute;
+  left: 5px;
+  cursor: pointer;
+  color: #494948;
+  border-radius: 5px;
+  margin: 15px 30px;
+  font-size: 29px;
+  background-color: whitesmoke;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+    inset -7px -7px 10px 0px rgba(0, 0, 0, .1),
+    3.5px 3.5px 20px 0px rgba(0, 0, 0, .1),
+    2px 2px 5px 0px rgba(0, 0, 0, .1);
+  height: 45px;
+  width: 45px;
+  text-align: center;
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
+  line-height: 45px;
+  transition: all .5s ease;
+}
+
+label #cancel {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#check:checked~.sidebar {
+  left: 0;
+}
+
+#check:checked~label #btn {
+  margin-left: 245px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+#check:checked~label #cancel {
+  margin-left: 245px;
+  opacity: 1;
+  visibility: visible;
+}
+
+@media(max-width: 860px) {
+  .sidebar {
+    height: auto;
+    width: 70px;
+    left: 0;
+    margin: 100px 0;
   }
-  :root {
-    --primary-color: #4CAF50;
-    --secondary-color: #333;
-    --background-color: #f5f5f5;
-    --text-color: #333;
-    --border-color: #ddd;
-  }
-  
-  .sidebar{
-    position: fixed;
-    width: 240px;
-    left: -240px;
-    height: 100%;
-    background-color: #fff;
-    transition: all .5s ease;
-  }
-  .sidebar header{
-    font-size: 20px;
-    color: #353535;
-    line-height: 70px;
-    text-align: center;
-    background-color: #fff;
-    user-select: none;
-    font-family:Arial, sans-serif;
-  }
-  .sidebar a{
-    display: block;
-    height: 50px;
-    width: 100%;
-    color: #353535;
-    line-height: 65px;
-    padding-left: 30px;
-    box-sizing: border-box;
-    border-left: 5px solid transparent;
-    font-family: Arial,sans-serif;
-    transition: all .5s ease;
-  }
-  a.active,a:hover{
-    border-left: 5px solid var(--accent-color);
-    color: #fff;
-     background: linear-gradient(to left, var(--accent-color), var(--gradient-color));
-  }
-  .sidebar a i{
-    font-size: 18px;
-    margin-right: 16px;
-  }
-  .sidebar a span{
-    letter-spacing: 1px;
-    text-transform: uppercase;
-  } 
-  #check{
+  header,
+  #btn,
+  #cancel {
     display: none;
   }
-  label #btn,label #cancel{
+  span {
     position: absolute;
-    left: 5px;
-    cursor: pointer;
-    color: #494948;
-    border-radius: 5px;
-    margin: 15px 30px;
-    font-size: 29px;
-    background-color: whitesmoke;
-    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-      inset -7px -7px 10px 0px rgba(0,0,0,.1),
-     3.5px 3.5px 20px 0px rgba(0,0,0,.1),
-     2px 2px 5px 0px rgba(0,0,0,.1);
-    height: 45px;
-    width: 45px;
-    text-align: center;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
-    line-height: 45px;
-    transition: all .5s ease;
-  }
-  label #cancel{
+    margin-left: 23px;
     opacity: 0;
     visibility: hidden;
   }
-  #check:checked ~ .sidebar{
-    left: 0;
+  .sidebar a {
+    height: 60px;
   }
-  #check:checked ~ label #btn{
-    margin-left: 245px;
-    opacity: 0;
-    visibility: hidden;
+  .sidebar a i {
+    margin-left: -10px;
   }
-  #check:checked ~ label #cancel{
-    margin-left: 245px;
+  a:hover {
+    width: 200px;
+    background: inherit;
+  }
+  .sidebar a:hover span {
     opacity: 1;
     visibility: visible;
   }
-  @media(max-width : 860px){
-    .sidebar{
-      height: auto;
-      width: 70px;
-      left: 0;
-      margin: 100px 0;
-    }
-    header,#btn,#cancel{
-      display: none;
-    }
-    span{
-      position: absolute;
-      margin-left: 23px;
-      opacity: 0;
-      visibility: hidden;
-    }
-    .sidebar a{
-      height: 60px;
-    }
-    .sidebar a i{
-      margin-left: -10px;
-    }
-    a:hover {
-      width: 200px;
-      background: inherit;
-    }
-    .sidebar a:hover span{
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-  
-  .sidebar > a.active,.sidebar > a:hover:nth-child(even) {
-    --accent-color: #333232;
-    --gradient-color: #494948;
-   
-  }
-  .sidebar a.active,.sidebar > a:hover:nth-child(odd) {
-    --accent-color: #333232;
-    --gradient-color: #494948;
-  }
-  
+}
+
+.sidebar>a.active,
+.sidebar>a:hover:nth-child(even) {
+  --accent-color: #323233;
+  --gradient-color: #494948;
+}
+
+.sidebar a.active,
+.sidebar>a:hover:nth-child(odd) {
+  --accent-color: #333232;
+  --gradient-color: #494948;
+}
+
